deps/jansson/test/suites/invalid/object-no-value/error.normal
2 0 6
unexpected token near end of file
